// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SearchListingFilters Container test should match snapshot test with Classifieds Category with Errors set to false 1`] = `
<div
  className="col-start-1 col-end-7 py-5 px-5 my-6 ml-6 bg-white shadow-lg rounded-xl"
>
  <div
    className="grid grid-cols-2 gap-6"
  >
    <div
      className="col-span-3 sm:col-span-2"
    >
      <label
        className="text-2xl font-medium"
      >
        Search Filtering
      </label>
      <SubmitButton
        className="btn btn-green w-1/4 float-right py-2"
        inputValue="Search"
        onClick={[MockFunction]}
      />
      <section
        className="my-8"
      >
        <section
          className="mb-4"
        >
          <label
            className="label text-lg mb-1"
          >
            Search Area
          </label>
          <SearchArea
            onChange={[MockFunction]}
            searchAreaCityError={false}
            searchAreaProvinceError={false}
            searchAreaRadiusError={false}
          />
        </section>
        <label
          className="label text-lg mb-1"
        >
          Select Listing Category
        </label>
        <Dropdown
          dropdownCSS={
            Object {
              "control": [Function],
              "menuPortal": [Function],
            }
          }
          initialSelection={
            Object {
              "label": "Rentals",
              "value": "Rentals",
            }
          }
          onChange={[MockFunction]}
          options={
            Array [
              Object {
                "label": "Rentals",
                "value": "Rentals",
              },
              Object {
                "label": "House & Yard Services",
                "value": "House & Yard Services",
              },
              Object {
                "label": "Legal & Sales",
                "value": "Legal & Sales",
              },
              Object {
                "label": "Classes, Clubs & Events",
                "value": "Classes, Clubs & Events",
              },
            ]
          }
        />
      </section>
      <section
        className="false my-4"
      >
        <p
          className="label text-lg mb-1"
        >
          Select Subcategories
        </p>
        <Checkbox
          fontNormal={true}
          id="House,Partial house / suite up or down,Duplex / triplex,Apartment,Condo/townhouse,Rural,Country,Other"
          label="House,Partial house / suite up or down,Duplex / triplex,Apartment,Condo/townhouse,Rural,Country,Other"
          onChange={[MockFunction]}
        />
      </section>
    </div>
  </div>
</div>
`;

exports[`SearchListingFilters Container test should match snapshot test with Classifieds Category with Errors set to true 1`] = `
<div
  className="col-start-1 col-end-7 py-5 px-5 my-6 ml-6 bg-white shadow-lg rounded-xl"
>
  <div
    className="grid grid-cols-2 gap-6"
  >
    <div
      className="col-span-3 sm:col-span-2"
    >
      <label
        className="text-2xl font-medium"
      >
        Search Filtering
      </label>
      <SubmitButton
        className="btn btn-green w-1/4 float-right py-2"
        inputValue="Search"
        onClick={[MockFunction]}
      />
      <section
        className="my-8"
      >
        <section
          className="mb-4"
        >
          <label
            className="label text-lg mb-1"
          >
            Search Area
          </label>
          <SearchArea
            onChange={[MockFunction]}
            searchAreaCityError={true}
            searchAreaProvinceError={true}
            searchAreaRadiusError={true}
          />
        </section>
        <label
          className="label text-lg mb-1"
        >
          Select Listing Category
        </label>
        <Dropdown
          dropdownCSS={
            Object {
              "control": [Function],
              "menuPortal": [Function],
            }
          }
          initialSelection={
            Object {
              "label": "Rentals",
              "value": "Rentals",
            }
          }
          onChange={[MockFunction]}
          options={
            Array [
              Object {
                "label": "Rentals",
                "value": "Rentals",
              },
              Object {
                "label": "House & Yard Services",
                "value": "House & Yard Services",
              },
              Object {
                "label": "Legal & Sales",
                "value": "Legal & Sales",
              },
              Object {
                "label": "Classes, Clubs & Events",
                "value": "Classes, Clubs & Events",
              },
            ]
          }
        />
      </section>
      <section
        className="pl-1 border rounded-lg border-red-500 my-4"
      >
        <p
          className="label text-lg mb-1"
        >
          Select Subcategories
        </p>
        <Checkbox
          fontNormal={true}
          id="House,Partial house / suite up or down,Duplex / triplex,Apartment,Condo/townhouse,Rural,Country,Other"
          label="House,Partial house / suite up or down,Duplex / triplex,Apartment,Condo/townhouse,Rural,Country,Other"
          onChange={[MockFunction]}
        />
      </section>
    </div>
  </div>
</div>
`;

exports[`SearchListingFilters Container test should match snapshot test with Services Category with Errors set to false 1`] = `
<div
  className="col-start-1 col-end-7 py-5 px-5 my-6 ml-6 bg-white shadow-lg rounded-xl"
>
  <div
    className="grid grid-cols-2 gap-6"
  >
    <div
      className="col-span-3 sm:col-span-2"
    >
      <label
        className="text-2xl font-medium"
      >
        Search Filtering
      </label>
      <SubmitButton
        className="btn btn-green w-1/4 float-right py-2"
        inputValue="Search"
        onClick={[MockFunction]}
      />
      <section
        className="my-8"
      >
        <section
          className="mb-4"
        >
          <label
            className="label text-lg mb-1"
          >
            Search Area
          </label>
          <SearchArea
            onChange={[MockFunction]}
            searchAreaCityError={false}
            searchAreaProvinceError={false}
            searchAreaRadiusError={false}
          />
        </section>
        <label
          className="label text-lg mb-1"
        >
          Select Listing Category
        </label>
        <Dropdown
          dropdownCSS={
            Object {
              "control": [Function],
              "menuPortal": [Function],
            }
          }
          initialSelection={
            Object {
              "label": "Co-housing, Co-ops, Intergenerational & Planned Neighbourhoods",
              "value": "Co-housing, Co-ops, Intergenerational & Planned Neighbourhoods",
            }
          }
          onChange={[MockFunction]}
          options={
            Array [
              Object {
                "label": "Co-housing, Co-ops, Intergenerational & Planned Neighbourhoods",
                "value": "Co-housing, Co-ops, Intergenerational & Planned Neighbourhoods",
              },
              Object {
                "label": "Home Share Facilitation & Supporting Services",
                "value": "Home Share Facilitation & Supporting Services",
              },
              Object {
                "label": "Home Sharing Businesses, Groups and Organizations",
                "value": "Home Sharing Businesses, Groups and Organizations",
              },
              Object {
                "label": "Government & Human Service Agencies Offering Shared Living & Support Services",
                "value": "Government & Human Service Agencies Offering Shared Living & Support Services",
              },
            ]
          }
        />
      </section>
      <section
        className="false my-4"
      >
        <p
          className="label text-lg mb-1"
        >
          Select Subcategories
        </p>
        <Checkbox
          fontNormal={true}
          id="Co-housing Groups & Communities,Cooperatives,Communal Living,Eco villages,Intergenerational Living,Shared Living First Step Homes,Other"
          label="Co-housing Groups & Communities,Cooperatives,Communal Living,Eco villages,Intergenerational Living,Shared Living First Step Homes,Other"
          onChange={[MockFunction]}
        />
      </section>
    </div>
  </div>
</div>
`;

exports[`SearchListingFilters Container test should match snapshot test with Services Category with Errors set to true 1`] = `
<div
  className="col-start-1 col-end-7 py-5 px-5 my-6 ml-6 bg-white shadow-lg rounded-xl"
>
  <div
    className="grid grid-cols-2 gap-6"
  >
    <div
      className="col-span-3 sm:col-span-2"
    >
      <label
        className="text-2xl font-medium"
      >
        Search Filtering
      </label>
      <SubmitButton
        className="btn btn-green w-1/4 float-right py-2"
        inputValue="Search"
        onClick={[MockFunction]}
      />
      <section
        className="my-8"
      >
        <section
          className="mb-4"
        >
          <label
            className="label text-lg mb-1"
          >
            Search Area
          </label>
          <SearchArea
            onChange={[MockFunction]}
            searchAreaCityError={true}
            searchAreaProvinceError={true}
            searchAreaRadiusError={true}
          />
        </section>
        <label
          className="label text-lg mb-1"
        >
          Select Listing Category
        </label>
        <Dropdown
          dropdownCSS={
            Object {
              "control": [Function],
              "menuPortal": [Function],
            }
          }
          initialSelection={
            Object {
              "label": "Co-housing, Co-ops, Intergenerational & Planned Neighbourhoods",
              "value": "Co-housing, Co-ops, Intergenerational & Planned Neighbourhoods",
            }
          }
          onChange={[MockFunction]}
          options={
            Array [
              Object {
                "label": "Co-housing, Co-ops, Intergenerational & Planned Neighbourhoods",
                "value": "Co-housing, Co-ops, Intergenerational & Planned Neighbourhoods",
              },
              Object {
                "label": "Home Share Facilitation & Supporting Services",
                "value": "Home Share Facilitation & Supporting Services",
              },
              Object {
                "label": "Home Sharing Businesses, Groups and Organizations",
                "value": "Home Sharing Businesses, Groups and Organizations",
              },
              Object {
                "label": "Government & Human Service Agencies Offering Shared Living & Support Services",
                "value": "Government & Human Service Agencies Offering Shared Living & Support Services",
              },
            ]
          }
        />
      </section>
      <section
        className="pl-1 border rounded-lg border-red-500 my-4"
      >
        <p
          className="label text-lg mb-1"
        >
          Select Subcategories
        </p>
        <Checkbox
          fontNormal={true}
          id="Co-housing Groups & Communities,Cooperatives,Communal Living,Eco villages,Intergenerational Living,Shared Living First Step Homes,Other"
          label="Co-housing Groups & Communities,Cooperatives,Communal Living,Eco villages,Intergenerational Living,Shared Living First Step Homes,Other"
          onChange={[MockFunction]}
        />
      </section>
    </div>
  </div>
</div>
`;
